// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should alter a color and leave alpha channel untouched 1`] = `
"
div {
  color: rgba(255,0,0,0.5);
}
"
`;

exports[`should alter both rgb(), rgba(), hsl() and hsla() colors 1`] = `
"
div {
  border: solid 1px rgb(255,0,0);
  color: rgba(255,0,0,0.5);
  background-color: hsl(0,100%,50%);
  outline: 1px solid hsla(0,100%,50%,0.9);
}
"
`;

exports[`should not alter a color with different alpha channel 1`] = `
"
div {
  color: rgba(0,0,0,0.5);
}
"
`;
